--- a/Assignment-module 2/index.html
+++ b/Assignment-module 2/index.html
@@ -1,5 +1,46 @@
 <!DOCTYPE html>
 <head>
-<title>I am first</title>
+    <title>Assignment Solution for Module 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/module-2.css">
 </head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+           <div class="parent-div">
+            <div class="position-title title-pink">
+                Chicken
+                </div>
+                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="parent-div">
+             <div class="position-title title-red">
+                 Chicken
+                 </div>
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+             </div>
+         </div>
+         <div class="col-lg-4 col-md-12 col-sm-12">
+            <div class="parent-div">
+             <div class="position-title title-yellow">
+                 Chicken
+                 </div>
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+                 lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+             </div>
+         </div>
+        
+    </div>
+</body>
 </html>
