change in text-center

--- a/Assignment-module3/index.html
+++ b/Assignment-module3/index.html
@@ -26,13 +26,13 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs margin-0">
-            <li class="border-bottom">
+            <li class="border-bottom text-center">
                 <span>Chicken</span>
             </li>
-            <li class="border-bottom">
+            <li class="border-bottom text-center">
                 <span>Beef</span>
             </li>
-            <li class="border-bottom">
+            <li class="border-bottom text-center">
                 <span>Sushi</span>
             </li>
           </ul><!-- #nav-list -->
